meego-keyboard (0.5.1~1) unstable; urgency=low

  * NOT RELEASED
  * Fixes: NB#192118 - Two backspace buttons are there in the French vkb layout
  * Implemented: SWP#TINME-1053 - Change gconf to store filename instead of language code

 -- Ning Chi <ext-chi.ning@nokia.com>  Wed, 15 Sep 2010 10:52:57 +0300

meego-keyboard (0.5.0-3) unstable; urgency=low

  * Fixes: Navigation bar not coming back after vkb close.
  * Changes: Fixture for matti get key

 -- huaming wang <huaming.wang@nokia.com>  Tue, 14 Sep 2010 12:52:33 +0300

meego-keyboard (0.5.0-2) unstable; urgency=low

  * Fixes: Change the ownership of candidatesModel to avoid unit test crash.
  * Fixes: not updated im indicator when hwkb script is changed
  * Fixes: spacing-horizontal in libmeego-keyboard.css
  * Fixes: Reaction map fixes

 -- huaming wang <huaming.wang@nokia.com>  Tue, 14 Sep 2010 10:34:42 +0300

meego-keyboard (0.5.0-1) unstable; urgency=low

  * Fixes: NB#190740 - Releasing long press of HWK backspace in text fields does not stop deletion immediately
  * Fixes: NB#187289 - [browser-blocker] Last character entered by vkb is doubled in awesomebar when "Sym" button is pressed
  * Fixes: NB#186306 - '+' or '-' symbols are not working in the number text field.
  * Fixes: Sym+character with latched modifiers
  * Standard toolbar is now shaped (CSS doesn't refer to new graphical assets yet)
  * Toolbar handles removed, invisible handle disabled

 -- huaming wang <huaming.wang@nokia.com>  Mon, 13 Sep 2010 11:29:55 +0300

meego-keyboard (0.4.17-3) unstable; urgency=low

  * New release

 -- huaming wang <huaming.wang@nokia.com>  Tue, 07 Sep 2010 14:15:17 +0300

meego-keyboard (0.4.17-2) unstable; urgency=low
 
  * Fix package dependency

 -- huaming wang <huaming.wang@nokia.com>  Tue, 07 Sep 2010 11:30:55 +0300

meego-keyboard (0.4.17-1) unstable; urgency=low

  * Update package dependency with imengineword
  * Use new MImEngineWordsInterfaceFactory class
  * Fix QApplication parameter lifetimes